--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
+
+spring.thymeleaf.cache=false
